<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.0.5</version>
    <relativePath /> <!-- lookup parent from repository -->
  </parent>

  <groupId>dev.marshalhayes.digitalai.agility.tools</groupId>
  <artifactId>agility-tools</artifactId>
  <version>0.0.1</version>
  <packaging>pom</packaging>

  <properties>
    <java.version>25</java.version>
  </properties>

  <modules>
    <module>cli</module>
    <module>client-starter</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>dev.marshalhayes.digitalai.agility.tools</groupId>
        <artifactId>client-starter</artifactId>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>
